--- a/index.html
+++ b/index.html
@@ -2,6 +2,16 @@
 <html>
   <head>
     <title>ASCII Art Jump and Run</title>
+    <style>
+      body {
+        font-family: monospace;
+        white-space: pre;
+        font-size: 16px;
+      }
+      #gameCanvas {
+        line-height: 1;
+      }
+    </style>
   </head>
   <body></body>
 </html>
