--- a/index.html
+++ b/index.html
@@ -1,19 +1,130 @@
 <!DOCTYPE html>
 <html>
-  <head>
+<head>
     <title>ASCII Art Jump and Run</title>
     <style>
-      body {
-        font-family: monospace;
-        white-space: pre;
-        font-size: 16px;
-      }
-      #gameCanvas {
-        line-height: 1;
-      }
+        body {
+            font-family: monospace;
+            white-space: pre;
+            font-size: 16px;
+        }
+        #gameCanvas {
+            line-height: 1;
+        }
     </style>
-  </head>
-  <body>
+</head>
+<body>
     <div id="gameCanvas"></div>
-  </body>
+    <script>
+        const canvasWidth = 120;
+        const canvasHeight = 20;
+        const groundLevel = canvasHeight - 2;
+        let playerX = 10;
+        let playerY = groundLevel;
+        let isJumping = false;
+        let jumpHeight = 5;
+        let jumpCounter = 0;
+        let gravity = 1;
+
+        // Create the initial canvas
+        const canvas = Array.from({ length: canvasHeight }, () => Array(canvasWidth).fill(' '));
+        const gameCanvas = document.getElementById('gameCanvas');
+
+        // Function to draw a tree
+        function drawTree(x, y) {
+            const tree = [
+                "  ^  ",
+                " ^^^ ",
+                "^^^^^",
+                "  |  ",
+                "  |  "
+            ];
+            for (let i = 0; i < tree.length; i++) {
+                for (let j = 0; j < tree[i].length; j++) {
+                    if (x + j < canvasWidth && y + i < canvasHeight) {
+                        canvas[y + i][x + j] = tree[i][j];
+                    }
+                }
+            }
+        }
+
+        // Function to draw a cloud
+        function drawCloud(x, y) {
+            const cloud = [
+                "  ___  ",
+                " (   ) ",
+                "(     )",
+                " (___) "
+            ];
+            for (let i = 0; i < cloud.length; i++) {
+                for (let j = 0; j < cloud[i].length; j++) {
+                    if (x + j < canvasWidth && y + i < canvasHeight) {
+                        canvas[y + i][x + j] = cloud[i][j];
+                    }
+                }
+            }
+        }
+
+        // Function to render the canvas
+        function renderCanvas() {
+            // Fill background with empty spaces
+            for (let y = 0; y < canvasHeight; y++) {
+                for (let x = 0; x < canvasWidth; x++) {
+                    canvas[y][x] = ' ';
+                }
+            }
+
+            // Draw the ground
+            for (let x = 0; x < canvasWidth; x++) {
+                canvas[groundLevel + 1][x] = '=';
+            }
+
+            // Draw trees
+            drawTree(5, groundLevel - 4);
+            drawTree(30, groundLevel - 4);
+            drawTree(55, groundLevel - 4);
+            drawTree(80, groundLevel - 4);
+
+            // Draw clouds
+            drawCloud(20, 3);
+            drawCloud(50, 5);
+            drawCloud(80, 2);
+
+            // Draw the player
+            canvas[playerY][playerX] = '@';
+
+            gameCanvas.textContent = canvas.map(row => row.join('')).join('\n');
+        }
+
+        // Handle keyboard input
+        document.addEventListener('keydown', (e) => {
+            if (e.key === 'ArrowRight') {
+                playerX = Math.min(canvasWidth - 1, playerX + 1);
+            } else if (e.key === 'ArrowLeft') {
+                playerX = Math.max(0, playerX - 1);
+            } else if (e.key === ' ' && !isJumping) {
+                isJumping = true;
+            }
+        });
+
+        // Implement gravity and jump mechanics
+        function gameLoop() {
+            if (isJumping) {
+                if (jumpCounter < jumpHeight) {
+                    playerY -= 1;
+                    jumpCounter += 1;
+                } else {
+                    isJumping = false;
+                    jumpCounter = 0;
+                }
+            } else if (playerY < groundLevel) {
+                playerY = Math.min(groundLevel, playerY + gravity);
+            }
+
+            renderCanvas();
+        }
+
+        setInterval(gameLoop, 100);
+    </script>
+</body>
 </html>
