--- a/index.html
+++ b/index.html
@@ -26,6 +26,7 @@
       let jumpCounter = 0;
       let gravity = 0.5; // Reduced gravity
       let yVelocity = 0;
+      const keysPressed = {};
 
       const platforms = [
         { x: 15, y: groundLevel - 4, width: 10 },
@@ -110,14 +111,11 @@
 
       // Handle keyboard input
       document.addEventListener("keydown", (e) => {
-        if (e.key === "ArrowRight") {
-          playerX = Math.min(canvasWidth - 1, playerX + 1);
-        } else if (e.key === "ArrowLeft") {
-          playerX = Math.max(0, playerX - 1);
-        } else if (e.key === " " && !isJumping) {
-          isJumping = true;
-          yVelocity = -jumpHeight;
-        }
+        keysPressed[e.key] = true;
+      });
+
+      document.addEventListener("keyup", (e) => {
+        keysPressed[e.key] = false;
       });
 
       // Check if the player is touching a platform
@@ -136,6 +134,17 @@
 
       // Game loop
       function gameLoop() {
+        if (keysPressed["ArrowRight"]) {
+          playerX = Math.min(canvasWidth - 1, playerX + 1);
+        } else if (keysPressed["ArrowLeft"]) {
+          playerX = Math.max(0, playerX - 1);
+        }
+
+        if (keysPressed[" "] && !isJumping) {
+          isJumping = true;
+          yVelocity = -jumpHeight;
+        }
+
         if (isJumping) {
           playerY += yVelocity;
 
