--- a/index.html
+++ b/index.html
@@ -126,7 +126,7 @@
           if (
             enemy.x < canvasWidth &&
             enemy.y < canvasHeight &&
-            !enemy.isStomped
+            !enemy.isCollided
           ) {
             canvas[enemy.y][enemy.x] = "E";
           }
@@ -134,7 +134,7 @@
 
         // Draw projectiles
         for (const enemy of enemies) {
-          if (enemy.projectileX !== null && !enemy.isStomped) {
+          if (enemy.projectileX !== null && !enemy.isCollided) {
             enemy.projectileX += enemy.projectileDirection;
             if (enemy.projectileX >= 0 && enemy.projectileX < canvasWidth) {
               canvas[enemy.y][enemy.projectileX] = "-";
@@ -186,15 +186,11 @@
         return false;
       }
 
-      // Check for stomping on enemies
-      function checkStomp() {
+      // Check for collision with enemies
+      function checkEnemyCollision() {
         for (const enemy of enemies) {
-          if (
-            playerY + 1 === enemy.y &&
-            playerX === enemy.x &&
-            !enemy.isStomped
-          ) {
-            enemy.isStomped = true;
+          if (playerY === enemy.y && playerX === enemy.x && !enemy.isCollided) {
+            enemy.isCollided = true;
             return true;
           }
         }
@@ -246,7 +242,7 @@
 
         // Handle enemy projectiles
         for (const enemy of enemies) {
-          if (enemy.throwingInterval <= 0 && !enemy.isStomped) {
+          if (enemy.throwingInterval <= 0 && !enemy.isCollided) {
             enemy.projectileX = enemy.x + enemy.projectileDirection;
             enemy.throwingInterval = 60;
           } else {
@@ -260,8 +256,8 @@
           playerY = groundLevel;
         }
 
-        // Check for stomping on enemies
-        if (checkStomp()) {
+        // Check for collision with enemies
+        if (checkEnemyCollision()) {
           isJumping = false;
         }
 
